# PicoBrg

./: README.md  Release Notes[eng].txt  Release Notes[jpn].txt  リリースノート.txt
FW/: PicoBrg_20240701.uf2  PicoBrg_20240702.uf2  PicoBrg_20240703.uf2  PicoBrg_20240704.uf2  PicoLnCnv_20240622.uf2  PicoLnCnv_WL_20240622.uf2
PicoBrg_binary_and_manual_20240707/binary/FW/: PicoBrg_20240707.uf2
PicoBrg_binary_and_manual_20240712/binary/FW/: PicoBrg_20240712.uf2
PicoBrg_binary_and_manual_20240715/binary/FW/: PicoBrg_20240715.uf2
PicoBrg_binary_and_manual_20250301/binary/FW/: PicoBrg_20250301.uf2
PicoBrg_binary_and_manual_20250315/binary/FW/: PicoBrg_20250315.uf2
PicoBrg_binary_and_manual_20250501/binary/FW/: PicoBrg_20250501.uf2
PicoBrg_binary_and_manual_20250504/binary/FW/: PicoBrg_20250504.uf2
docs/en/01_Manual/: README.md
docs/en/02_FW_Build_Guide/: README.md
docs/ja/: 03_リリースノート.txt
docs/ja/01_マニュアル/: README.md
src_app/JigApp/: JigApp.sln
src_fw/: How to build[eng].txt  How to build[jpn].txt  ビルド方法.txt
src_fw/PicoBrg/: Ble.cpp  Ble.h  Ble.ino  CMakeLists.txt  Cmd.c  Cmd.cpp  Cmd.h  Cmd.ino  Common.c  Common.cpp  Common.h  Common.ino  Flash.c  Flash.cpp  Flash.h  Flash.ino  Frame.c  Frame.cpp  Frame.h  Frame.ino  Gpio.h  PicoBrg.ino  Tcp.cpp  Tcp.h  Tcp.ino  TcpClient.c  TcpCommon.c  TcpCommon.h  TcpServer.c  Timer.cpp  Timer.h  Timer.ino  Uart.c  Uart.cpp  Uart.h  Uart.ino  Ver.h  Wireless.c  Wireless.cpp  Wireless.ino  (+2 more)
src_fw/PicoBrg/PicoBrg/: CMakeLists.txt  Common.h  Flash.c  Flash.h  Frame.c  Gpio.c  Timer.c  Timer.h  Ver.h
(+26 files in other folders)
